# FBIwanted

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
data/: test_appearance.pkl  test_office.pkl
demo/: Demo.ipynb  Whole_Original_Dataset.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
src/FBIwanted/: FBIwanted.py  __init__.py
tests/: test_FBIwanted.py  test_fbi_wanted_appearance.py  test_fbi_wanted_office.py
