[tool.poetry]
name = "FBIwanted"
version = "0.1.0"
description = "This package is a python API wrapper around the FBI Wanted API. It allows you to retrieve a data set of FBI wanted people by their appearance features or by administrative regions(city name), as well as downloading their posters to see the photos. Try it out if you suspect someone you see may be a FBI wanted person, and find out whether you are in danger and whether there is a reward!"
authors = ["Qinyue Hao"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
